# video_analytics

./: .dockerignore  .env.example  .env.production  .gitignore  ARCHITECTURE.md  CAMERA_SETUP_SIMPLE.md  CHANGELOG.md  CHECK_CAMERA.md  CLEAR_DATA_GUIDE.md  CONTRIBUTING.md  DEPLOY.md  DISTANCE_BASED_COUNTING.md  ERRORS_FIXED.md  FILES_CREATED.txt  FINAL_SOLUTION.md  HOW_TO_USE_DISTANCE_MODE.md  LICENSE  Makefile  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  QUICKSTART_CAMERA.md  QUICK_REID_FIX.md  README.md  README_CAMERA.md  README_NEW.md  REID_GUIDE.md  REID_SUMMARY.md  REID_TROUBLESHOOTING.md  SETUP_INSTRUCTIONS.md  START_HERE.md  SUMMARY.md  TRACKING_EXPLAINED.md  TROUBLESHOOTING.md  VIDEO_STREAM_FIXED.md  check_system.py  docker-compose.full.yml  docker-compose.prod.yml  docker-compose.yml  enable_camera.sh
Ultralytics/: settings.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  restart.sh  run.py  zaga_analytics.db
backend/app/: __init__.py  auth.py  config.py  counter.py  crud.py  cv_worker.py  db.py  export.py  logging_config.py  main.py  main_legacy.py  models.py  reid.py  schemas.py  utils.py  vps_health.py
backend/app/api/: analytics.py  auth.py  cameras.py  events.py
backend/app/cv/: bytetrack.yaml  counter.py  tracker.py  worker.py
backend/app/models/: __init__.py  database.py  tables.py
backend/app/services/: analytics.py  auth.py
backend/app/static/: index.html  main.js
backend/app/trackers/: bytetrack.yaml
backend/app/ws/: manager.py
data/: reid_db.pkl
docs/: DAHUA_STREAM.md  DOCKER_DEPLOY_STEPS.md
frontend/admin/: Dockerfile  package-lock.json  package.json
frontend/admin/src/: App.tsx  theme.ts
frontend/analytics/: Dockerfile  package-lock.json  package.json
frontend/analytics/src/: App.tsx  main.tsx
infra/: Caddyfile  mediamtx.Dockerfile  mediamtx.yml
infra/mediamtx/: mediamtx.yml
scripts/: setup-vps.sh
tests/: __init__.py  test_counter.py
web/: Dockerfile  nginx.conf  package-lock.json  package.json
web/src/: App.tsx
web/src/contexts/: AuthContext.tsx
web/src/hooks/: useAnalytics.ts
web/src/i18n/: index.ts
web/src/pages/: Dashboard.tsx  Login.tsx
(+13 files in other folders)
